--- a/osiris-faces/pom.xml
+++ b/osiris-faces/pom.xml
@@ -1,70 +1,117 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  	<modelVersion>4.0.0</modelVersion>
-  	<groupId>com.osiris</groupId>
-  	<artifactId>osiris-faces</artifactId>
-  	<version>0.0.1-SNAPSHOT</version>
-  	<name>Osiris Faces</name>
-  	<description>Bibliotecas de Componentes JSF</description>
-  
-    <properties>
-  		<jsf.version>2.2.0</jsf.version>
-  		<jsp.api.version>2.1</jsp.api.version>
-  		<javaee.version>7.0</javaee.version>
-  		<javax.servlet.version>3.0.1</javax.servlet.version>
-  		<fileupload.version>1.3</fileupload.version>
-  		<primefaces.version>3.5</primefaces.version>
-  	</properties>
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<modelVersion>4.0.0</modelVersion>
+
+	<groupId>com.osiris</groupId>
+	<artifactId>osiris-faces</artifactId>
+	<version>0.0.2-SNAPSHOT</version>
+	<name>Osiris Faces</name>
+
+	<description>Bibliotecas de Componentes JSF</description>
+
+	<properties>
+		<jsf.version>2.2.0</jsf.version>
+		<jsp.api.version>2.1</jsp.api.version>
+		<javaee.version>7.0</javaee.version>
+		<javax.servlet.version>3.0.1</javax.servlet.version>
+		<fileupload.version>1.3</fileupload.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>${jsf.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-impl</artifactId>
 			<version>${jsf.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet.jsp</groupId>
 			<artifactId>jsp-api</artifactId>
 			<version>${jsp.api.version}</version>
 		</dependency>
-		
+
 		<dependency>
-		   	<groupId>javax</groupId>
-		   	<artifactId>javaee-api</artifactId>
-		   	<version>${javaee.version}</version>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>${javaee.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${javax.servlet.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
 			<version>${fileupload.version}</version>
 		</dependency>
-		
-		<dependency>  
-		    <groupId>org.primefaces</groupId>  
-		    <artifactId>primefaces</artifactId>  
-		    <version>${primefaces.version}</version>
-		</dependency>
 	</dependencies>
-	
-	<repositories>
-	  	<repository>  
-	    	<id>prime-repo</id>  
-	    	<name>PrimeFaces Maven Repository</name>  
-	    	<url>http://repository.primefaces.org</url>  
-	    	<layout>default</layout>  
-		</repository>
-	</repositories>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>yuicompressor-maven-plugin</artifactId>
+				<version>1.1</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compress</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<nosuffix>true</nosuffix>
+					<linebreakpos>-1</linebreakpos>
+<!-- 					<excludes> -->
+<!-- 						<exclude>**/*.js</exclude> -->
+<!-- 						<exclude>**/*.css</exclude> -->
+<!-- 					</excludes> -->
+					<aggregations>
+						<aggregation>
+							<insertNewLine>true</insertNewLine>
+							<removeIncluded>true</removeIncluded>
+							<output>${project.build.directory}/classes/META-INF/resources/osiris/osiris.css</output>
+							<includes>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/css/mybootstrap.css</include>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/css/menu.css</include>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/bootstrap/css/bootstrap.css</include>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/bootstrap/css/bootstrap-theme.css</include>
+							</includes>
+						</aggregation>
+						<aggregation>
+							<insertNewLine>true</insertNewLine>
+							<removeIncluded>true</removeIncluded>
+							<output>${project.build.directory}/classes/META-INF/resources/osiris/osiris.js</output>
+							<includes>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/jquery/jquery-1.9.1.min.js</include>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/core/core.js</include>
+								<include>${project.build.directory}/classes/META-INF/resources/osiris/bootstrap/js/bootstrap.js</include>
+							</includes>
+						</aggregation>
+					</aggregations>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
